0.5.6
=======================================================================
Image Viewer
   o Added 2 features: reflect left/right and up/down
      (contributed by Jean-Pierre Demailly)
   o Added feature for save file when reflect or rotate.
Other:
   o EPS image format supported (need GhostSCript installed).
   o SGI image format supported.
   o Added Rename Sequence function.
   o Improvement in code source.
i18n:
   o Added Polish translation
      (contributed by Leszek Pietryka)
Bug:
   o Improvement in im_xcf.c and im_psd.c files
      (contributed by Jean-Pierre Demailly)
   o Fixed problem of ICO plugin (wrong color bug)
      (contributed by Jean-Pierre Demailly)

0.5.5.1
=======================================================================
Image Browser:
   o Show a progress bar while reading a directory.
   o Sort by file type.
Other:
   o TGA image format supported.
   o XWD image format supported.
   o SUN RASTER image format supported.
   o OS/2 BMP (2.2.x, 2.1.x and 1.x) image format supported.
   o Improvement in PNM, PBM, PPM and PGM files support.
   o Changes in Delete function:
      * use Delete key.
      * delete single or selection of files.
      * selection bar stay in the next file.
   o Changes in Rename function.
i18n:
   o Added Russian and Ukrainian translation
      (contributed by Dmitry Goroh)
Bug:
   o Fixed GTK See crash when doing "Refresh" in "Small icons"
     or "Thumbnails" mode.
      (report by Dmitry Goroh)
   o Fixed problem when launching GIMP
      (reported by Jan Keirse and Dmitry Goroh)


0.5.4
=======================================================================
Other:
   o Changes in configure and configure.in scripts for
     compile GTK See in Solaris 9 (sparc)
      (contributed by Holger Weiss)
Bug:
   o Fixed problem reading BMP files
      (reported by Kevin Krumwiede)


0.5.3
=======================================================================
i18n:
   o Added german translation