@@ -26,16 +26,17 @@
 
 #include <gtk/gtk.h>
 
-gboolean get_current_image (gchar *buffer);
-void     refresh_list      ();
-void     refresh_all       ();
-void     show_browser      ();
-void     gtksee_set_root   (guchar *new_root);
-void     menu_edit_rename  (GtkWidget *widget, gpointer data);
-void     menu_edit_delete  (GtkWidget *widget, gpointer data);
-void     menu_help_contents(GtkWidget *widget, gpointer data);
-void     menu_help_about   (GtkWidget *widget, gpointer data);
-void     gtksee_main       ();
+gboolean get_current_image  (gchar *buffer);
+void     refresh_list       ();
+void     refresh_all        ();
+void     show_browser       ();
+void     gtksee_set_root    (guchar *new_root);
+void     menu_edit_rename   (GtkWidget *widget, gpointer data);
+void     menu_edit_timestamp(GtkWidget *widget, gpointer data);
+void     menu_edit_delete   (GtkWidget *widget, gpointer data);
+void     menu_help_contents (GtkWidget *widget, gpointer data);
+void     menu_help_about    (GtkWidget *widget, gpointer data);
+void     gtksee_main        ();
 
 #ifdef __cplusplus
         }
